--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -1,9 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
+    <!-- Allows control over where resources are loaded from -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <!-- Short description of the page (limit to 150 characters) -->
+    <!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
     <meta name="description" content="{{ description }}">
+    <!-- Control the behavior of search engine crawling and indexing -->
+    <meta name="robots" content="index,follow,noodp,noydir"><!-- All Search Engines -->
+    <meta name="googlebot" content="index,follow"><!-- Google Specific -->
+    <!-- Full domain name or web address -->
+    <meta name="url" content="https://www.codezilla.nl/">
+    <!-- Allows control over how referrer information is passed -->
+    <meta name="referrer" content="no-referrer">
+    <!-- Links -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>{{ title }}</h1>
