--- a/src/main.scss
+++ b/src/main.scss
@@ -2,10 +2,25 @@
 ** ITCSS Architecture. For more info: http://technotif.com/manage-large-css-projects-with-itcss/
 */
 
+@charset 'UTF-8';
+
+/* Settings*/
+
 /* Tools */
-@import 'scss/mixins';
+// @import 'scss/mixins';
+
+/* Generic */
+@import 'node_modules/normalize-css/normalize';
+@import 'scss/generic/font';
+@import 'scss/generic/body';
+
+/* Elements */
 
 /* Objects */
+@import 'scss/objects/button';
+@import 'scss/objects/link';
+@import 'scss/objects/heading';
 
 /* Components */
 
+/* Utilities */
