--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -18,6 +18,7 @@
     <!-- Allows control over how referrer information is passed -->
     <meta name="referrer" content="no-referrer">
     <!-- Links -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
