--- a/src/scss/tools/mixins.scss
+++ b/src/scss/tools/mixins.scss
@@ -1,4 +1,5 @@
 /* [TOOL] mixins */
+@import 'scss/settings/variables';
 
 @mixin cz-font-family($style, $font: "Roboto") {
     font-family: $font;
