--- a/src/main.scss
+++ b/src/main.scss
@@ -12,15 +12,16 @@
 /* Generic */
 @import 'node_modules/normalize-css/normalize';
 @import 'scss/generic/font';
-@import 'scss/generic/body';
 
 /* Elements */
+@import 'scss/elements/page';
 
 /* Objects */
-@import 'scss/objects/button';
-@import 'scss/objects/link';
-@import 'scss/objects/heading';
+@import 'scss/objects/typography';
+// @import 'scss/objects/button';
 
 /* Components */
+@import 'scss/components/divider';
+@import 'scss/components/section';
 
 /* Utilities */
