--- a/src/scss/generic/font.scss
+++ b/src/scss/generic/font.scss
@@ -1,24 +1,56 @@
 $cz-font-radikal: '/font/radikal';
+$cz-font-roboto: '/font/roboto';
 
-// Loading Roboto from: https://fonts.googleapis.com/css?family=Roboto:300,300i,700,700i
+/* Available fonts:
+ * -------------------------
+ * Roboto:  Light, Bold
+ * Radikal: Regular, Bold
+ * -------------------------
+ */
 
-// /* Roboto Light Italic */
-// @font-face {
-//   font-family: 'Roboto';
-//   font-style: italic;
-//   font-weight: 300;
-//   src: local('Roboto Light Italic'), local('Roboto-LightItalic'), url(https://fonts.gstatic.com/s/roboto/v15/7m8l7TlFO-S3VkhHuR0at4gp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
-//   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-// }
+/* Roboto Light */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    src: url('#{$cz-font-roboto}/roboto.eot');
+    src: url('#{$cz-font-roboto}/roboto.eot?#iefix') format('embedded-opentype'),
+    url('#{$cz-font-roboto}/roboto-light.woff2') format('woff2'),
+    url('#{$cz-font-roboto}/roboto-light.woff') format('woff');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+@font-face {
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 300;
+    src: url('#{$cz-font-roboto}/roboto.eot');
+    src: url('#{$cz-font-roboto}/roboto.eot?#iefix') format('embedded-opentype'),
+    url('#{$cz-font-roboto}/roboto-light-italic.woff2') format('woff2'),
+    url('#{$cz-font-roboto}/roboto-light-italic.woff') format('woff');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+} 
 
-// /* Roboto Bold*/
-// @font-face {
-//   font-family: 'Roboto';
-//   font-style: normal;
-//   font-weight: 700;
-//   src: local('Roboto Bold'), local('Roboto-Bold'), url(https://fonts.gstatic.com/s/roboto/v15/d-6IYplOFocCacKzxwXSOJBw1xU1rKptJj_0jans920.woff2) format('woff2');
-//   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-// }
+// /* Roboto Bold */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: url('#{$cz-font-roboto}/roboto.eot');
+    src: url('#{$cz-font-roboto}/roboto.eot?#iefix') format('embedded-opentype'),
+    url('#{$cz-font-roboto}/roboto-bold.woff2') format('woff2'),
+    url('#{$cz-font-roboto}/roboto-bold.woff') format('woff');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+} 
+@font-face {
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 700;
+    src: url('#{$cz-font-roboto}/roboto.eot');
+    src: url('#{$cz-font-roboto}/roboto.eot?#iefix') format('embedded-opentype'),
+    url('#{$cz-font-roboto}/roboto-bold-italic.woff2') format('woff2'),
+    url('#{$cz-font-roboto}/roboto-bold-italic.woff') format('woff');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+} 
   
 /* Radikal UltraThin  
 @font-face {
@@ -68,7 +100,7 @@ $cz-font-radikal: '/font/radikal';
 */
 
 /* Radikal Light */
-@font-face {
+/* @font-face {
     font-family: 'Radikal';
     font-style: normal;
     font-weight: 300;
@@ -87,9 +119,9 @@ $cz-font-radikal: '/font/radikal';
   url('#{$cz-font-radikal}/324CAE_0_0.woff2') format('woff2'),
   url('#{$cz-font-radikal}/324CAE_0_0.woff') format('woff'),
   url('#{$cz-font-radikal}/324CAE_0_0.ttf') format('truetype');
-} 
+}  */
 
-/* Radikal Regular
+/* Radikal Regular */
 @font-face {
     font-family: 'Radikal';
     font-style: normal;
@@ -111,7 +143,6 @@ $cz-font-radikal: '/font/radikal';
     url('#{$cz-font-radikal}/324CAE_A_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_A_0.ttf') format('truetype');
 } 
-*/
 
 /* Radikal Medium
 @font-face {
