--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -2,26 +2,28 @@
 
 /* FONT */
 $cz-font-size: 16px;
-$cz-font-height: 20px;
+$cz-font-height: 32px;
 
 /* COLORS */
 
 // Colors
-$cz-color-primary:      rgb(82,215,11);         // #52d70b
-$cz-color-secondary:    rgb(32,193,203);        // #20c1cb
-$cz-color-secondary-80: rgb(4,156,165);         // #049ca5
+$cz-color-primary:          rgb(82,215,11);         // #52d70b
+$cz-color-secondary:        rgb(32,193,203);        // #20c1cb
+$cz-color-secondary-dark:   rgb(4,156,165);         // #049ca5
 
 // Fills
-$cz-fill-grey-light:    rgb(49,65,74);          // #31414a
-$cz-fill-grey:          rgb(32,42,47);          // #202a2f
-$cz-fill-grey-dark:     rgb(31,36,39);          // #1e2326
-$cz-fill-light:         rgb(255,255,255)        // #ffffff
+$cz-fill-grey-light:        rgb(49,65,74);          // #31414a
+$cz-fill-grey:              rgb(32,42,47);          // #202a2f
+$cz-fill-grey-dark:         rgb(31,36,39);          // #1e2326
+$cz-fill-light:             rgb(255,255,255);       // #ffffff
 
 // Texts
-$cz-text:               $cz-fill-grey-light;
-$cz-text-inverse:       rgba(255,255,255,0.7);
+$cz-text-heading:           $cz-fill-grey;
+$cz-text:                   $cz-fill-grey-light;
+$cz-text-inverse:           rgba(255,255,255,0.7);
 
 // Contexts
-$cz-color-shadow:       rgb(226,231,233);       // #e2e7e9
+$cz-color-shadow:           rgb(226,231,233);       // #e2e7e9
 
 /* OTHER STUFFS */
+$cz-inner-spacing: 16px;
