feat: implemented stylelint

--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -20,7 +20,7 @@ $cz-fill-light:             rgb(255,255,255);       // #ffffff
 // Texts
 $cz-text-heading:           $cz-fill-grey;
 $cz-text:                   $cz-fill-grey-light;
-$cz-text-inverse:           rgba(255,255,255,0.7);
+$cz-text-inverse:           rgba(255, 255, 255, .7);
 
 // Contexts
 $cz-color-shadow:           rgb(226,231,233);       // #e2e7e9
