--- a/src/scss/tools/mixins.scss
+++ b/src/scss/tools/mixins.scss
@@ -1,7 +1,7 @@
 /* [TOOL] mixins */
 @import 'scss/settings/variables';
 
-@mixin cz-font-family($style, $font: "Roboto") {
+@mixin cz-font-family($style, $font: 'Roboto') {
     font-family: $font;
 
     @if $style == 'Light' {
