--- a/src/scss/generic/font.scss
+++ b/src/scss/generic/font.scss
@@ -10,7 +10,7 @@ $cz-font-roboto: '/font/roboto';
 
 /* Roboto Light */
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     font-style: normal;
     font-weight: 300;
     src: url('#{$cz-font-roboto}/roboto.eot');
@@ -19,8 +19,9 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-roboto}/roboto-light.woff') format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     font-style: italic;
     font-weight: 300;
     src: url('#{$cz-font-roboto}/roboto.eot');
@@ -28,11 +29,11 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-roboto}/roboto-light-italic.woff2') format('woff2'),
     url('#{$cz-font-roboto}/roboto-light-italic.woff') format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-} 
+}
 
 // /* Roboto Bold */
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     font-style: normal;
     font-weight: 700;
     src: url('#{$cz-font-roboto}/roboto.eot');
@@ -40,9 +41,10 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-roboto}/roboto-bold.woff2') format('woff2'),
     url('#{$cz-font-roboto}/roboto-bold.woff') format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-} 
+}
+
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     font-style: italic;
     font-weight: 700;
     src: url('#{$cz-font-roboto}/roboto.eot');
@@ -50,11 +52,11 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-roboto}/roboto-bold-italic.woff2') format('woff2'),
     url('#{$cz-font-roboto}/roboto-bold-italic.woff') format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-} 
-  
-/* Radikal UltraThin  
+}
+
+/* Radikal UltraThin
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: normal;
     font-weight: 100;
     src: url('#{$cz-font-radikal}/324CAE_C_0.eot');
@@ -62,10 +64,10 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_C_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_C_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_C_0.ttf') format('truetype');
-} 
-  
+}
+
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: italic;
     font-weight: 100;
     src: url('#{$cz-font-radikal}/324CAE_D_0.eot');
@@ -73,12 +75,12 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_D_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_D_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_D_0.ttf') format('truetype');
-} 
+}
 */
 
 /* Radikal Thin
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: normal;
     font-weight: 200;
     src: url('#{$cz-font-radikal}/324CAE_B_0.eot');
@@ -86,9 +88,9 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_B_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_B_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_B_0.ttf') format('truetype');
-} 
+}
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: italic;
     font-weight: 200;
     src: url('#{$cz-font-radikal}/324CAE_1_0.eot');
@@ -96,12 +98,12 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_1_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_1_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_1_0.ttf') format('truetype');
-}  
+}
 */
 
-/* Radikal Light */
-/* @font-face {
-    font-family: 'Radikal';
+/* Radikal Light
+@font-face {
+    font-family: Radikal;
     font-style: normal;
     font-weight: 300;
     src: url('#{$cz-font-radikal}/324CAE_6_0.eot');
@@ -109,9 +111,9 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_6_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_6_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_6_0.ttf') format('truetype');
-} 
+}
 @font-face {
-  font-family: 'Radikal';
+  font-family: Radikal;
   font-style: italic;
   font-weight: 300;
   src: url('#{$cz-font-radikal}/324CAE_0_0.eot');
@@ -119,11 +121,11 @@ $cz-font-roboto: '/font/roboto';
   url('#{$cz-font-radikal}/324CAE_0_0.woff2') format('woff2'),
   url('#{$cz-font-radikal}/324CAE_0_0.woff') format('woff'),
   url('#{$cz-font-radikal}/324CAE_0_0.ttf') format('truetype');
-}  */
+} */
 
 /* Radikal Regular */
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: normal;
     font-weight: 400;
     src: url('#{$cz-font-radikal}/324CAE_9_0.eot');
@@ -131,10 +133,10 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_9_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_9_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_9_0.ttf') format('truetype');
-} 
-  
+}
+
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: italic;
     font-weight: 400;
     src: url('#{$cz-font-radikal}/324CAE_A_0.eot');
@@ -142,11 +144,11 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_A_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_A_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_A_0.ttf') format('truetype');
-} 
+}
 
 /* Radikal Medium
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: normal;
     font-weight: 500;
     src: url('#{$cz-font-radikal}/324CAE_7_0.eot');
@@ -154,10 +156,10 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_7_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_7_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_7_0.ttf') format('truetype');
-} 
-  
+}
+
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: italic;
     font-weight: 500;
     src: url('#{$cz-font-radikal}/324CAE_8_0.eot');
@@ -165,12 +167,12 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_8_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_8_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_8_0.ttf') format('truetype');
-}  
+}
 */
 
 /* Radikal Bold */
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: normal;
     font-weight: 700;
     src: url('#{$cz-font-radikal}/324CAE_3_0.eot');
@@ -178,10 +180,10 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_3_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_3_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_3_0.ttf') format('truetype');
-} 
-  
+}
+
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: italic;
     font-weight: 700;
     src: url('#{$cz-font-radikal}/324CAE_5_0.eot');
@@ -189,11 +191,11 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_5_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_5_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_5_0.ttf') format('truetype');
-} 
+}
 
 /* Radikal Black
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: normal;
     font-weight: 900;
     src: url('#{$cz-font-radikal}/324CAE_2_0.eot');
@@ -201,9 +203,9 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_2_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_2_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_2_0.ttf') format('truetype');
-} 
+}
 @font-face {
-    font-family: 'Radikal';
+    font-family: Radikal;
     font-style: italic;
     font-weight: 900;
     src: url('#{$cz-font-radikal}/324CAE_4_0.eot');
@@ -211,5 +213,5 @@ $cz-font-roboto: '/font/roboto';
     url('#{$cz-font-radikal}/324CAE_4_0.woff2') format('woff2'),
     url('#{$cz-font-radikal}/324CAE_4_0.woff') format('woff'),
     url('#{$cz-font-radikal}/324CAE_4_0.ttf') format('truetype');
-}  
+}
 */
