--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -27,3 +27,7 @@ $cz-color-shadow:           rgb(226,231,233);       // #e2e7e9
 
 /* OTHER STUFFS */
 $cz-inner-spacing: 16px;
+
+// Breakpoints
+$cz-breakpoint-desktop: 520px;
+$cz-max-width-desktop: 1000px;
