--- a/src/main.scss
+++ b/src/main.scss
@@ -23,5 +23,6 @@
 /* Components */
 @import 'scss/components/divider';
 @import 'scss/components/section';
+@import 'scss/components/container';
 
 /* Utilities */
