--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,10 @@
-<div>
-    <div class="cz-footer-block cz-footer-block--coffee">
+<footer class="cz-footer">
+    <div class="cz-footer__block cz-footer__block--coffee cz-footer-block">
         <h2 class="cz-footer-block__title">Kopje koffie of lunch?</h2>
         <p>Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
     </div>
-    <div class="cz-footer-block cz-footer-block--company">
+
+    <div class="cz-footer__block cz-footer__block--company cz-footer-block">
         <h2 class="cz-footer-block__title">CODEZILLA B.V.</h2>
         <p>
             Hoogoorddreef 9<br />
@@ -18,7 +19,7 @@
         <p><a href="tel:+31 (0) 20 3120 458">020 - 3120 458</a> of <a href="mailto:info@codezilla.nl">info@codezilla.nl</a></p>
     </div>
 
-    <div class="cz-footer-cta">
-        Bekijk <a href="{{ nextPage.url }}">{{ nextPage.title }}</a>
+    <div class="cz-footer__cta">
+        <a href="{{ nextPage.url }}" class="cz-footer__cta-link">Bekijk {{ nextPage.title }} ---></a>
     </div>
-</div>
+</footer>
