--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -19,6 +19,7 @@ $cz-fill-light:             rgb(255,255,255);       // #ffffff
 
 // Texts
 $cz-text-heading:           $cz-fill-grey;
+$cz-text-heading-inverse:   $cz-fill-light;
 $cz-text:                   $cz-fill-grey-light;
 $cz-text-inverse:           rgba(255, 255, 255, .7);
 
