--- a/src/main.scss
+++ b/src/main.scss
@@ -24,5 +24,6 @@
 @import 'scss/components/divider';
 @import 'scss/components/section';
 @import 'scss/components/container';
+@import 'scss/components/text';
 
 /* Utilities */
