--- a/src/scss/tools/mixins.scss
+++ b/src/scss/tools/mixins.scss
@@ -61,6 +61,12 @@
     }
 }
 
+@mixin cz-list-reset {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 // Use when you want the text to be hidden on the screen but accessible to screen readers
 @mixin cz-sr-only {
     border: 0;
