--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,7 @@
 
 /* Tools */
 // @import 'scss/mixins';
+// @import 'scss/divider';
 
 /* Generic */
 @import 'node_modules/normalize-css/normalize';
@@ -24,5 +25,8 @@
 @import 'scss/components/divider';
 @import 'scss/components/section';
 @import 'scss/components/container';
+@import 'scss/components/carousel';
+@import 'scss/components/menu';
 
 /* Utilities */
+@import 'scss/utilities/utilities';
