--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -7,7 +7,7 @@ $cz-font-height: 32px;
 /* COLORS */
 
 // Colors
-$cz-color-primary:          rgb(82,215,11);         // #52d70b
+$cz-color-primary:          rgb(104,213,23);        // #68d517
 $cz-color-secondary:        rgb(32,193,203);        // #20c1cb
 $cz-color-secondary-dark:   rgb(4,156,165);         // #049ca5
 
@@ -31,3 +31,7 @@ $cz-inner-spacing: 16px;
 // Breakpoints
 $cz-breakpoint-desktop: 520px;
 $cz-max-width-desktop: 1000px;
+
+// Named colors
+$cz-background: $cz-fill-grey-dark;
+$cz-text-inverse: $cz-fill-light;
