Added proper arrow

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -20,6 +20,6 @@
     </div>
 
     <div class="cz-footer__cta">
-        <a href="{{ nextPage.url }}" class="cz-footer__cta-link">Bekijk {{ nextPage.title }} ---></a>
+        <div><a href="{{ nextPage.url }}" class="cz-footer__cta-link">Bekijk {{ nextPage.title }}</a></div>
     </div>
 </footer>
