--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -19,6 +19,20 @@
 }
 
 .cz-footer__cta-link {
-    color: #fff;
+    position: relative;
+    font-size: 39px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #FFFFFF;
     text-decoration: none;
+
+    &:after {
+        content: ' ';
+        position: absolute;
+        right: -90px;
+        top: 0;
+        width: 68px;
+        height: 35px;
+        background-image: url("images/arrow-c2a.svg");
+    }
 }
