Added team page

--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -18,7 +18,7 @@
     <!-- Allows control over how referrer information is passed -->
     <meta name="referrer" content="no-referrer">
     <!-- Links -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     <h1>{{ title }}</h1>
@@ -27,6 +27,6 @@
     {{{ contents }}}
 
     {{> footer nextPage = nextPage }}
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 </html>
