Added footer blocks

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="cz-footer">
 
-    <section class="cz-section-inverse">
-        <div class="container">
+    <section class="cz-footer__block cz-section-inverse">
+        <div class="cz-footer__block-container container">
             <h2 class="heading-inverse">Koffie of lunch?</h2>
             <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
 
@@ -11,8 +11,8 @@
         </div>
     </section>
 
-    <section class="cz-section-inverse">
-        <div class="container">
+    <section class="cz-footer__block cz-section-inverse">
+        <div class="cz-footer__block-container container">
             <h2 class="heading-inverse">CODEZILLA B.V.</h2>
             <p class="cz-text-inverse">
                 Hoogoorddreef 9<br />
