--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -6,10 +6,11 @@
 
 .cz-footer__block {
 
-    @media screen and (min-width: $cz-breakpoint-desktop) {
+    // TODO: Decide on a proper breakpoint, 520 is too small
+    @media screen and (min-width: 900px) {
+        float: left;
         width: 50%;
         height: 465px;
-        float: left;
     }
 }
 
