--- a/src/main.scss
+++ b/src/main.scss
@@ -18,12 +18,13 @@
 
 /* Objects */
 @import 'scss/objects/typography';
-// @import 'scss/objects/button';
 
 /* Components */
 @import 'scss/components/divider';
 @import 'scss/components/section';
 @import 'scss/components/container';
 @import 'scss/components/text';
+
+@import 'scss/components/hackathon-template';
 
 /* Utilities */
