--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -1,4 +1,5 @@
 <!-- Place your hackathon markup here -->
+<h1 id="logo">CODEZILLA</h1>
 
 <h2 class="divider">Here's a rainbow puking panda!@</h2>
 <div class="cz-section cz-rainbow-puking-panda">
