--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -2,7 +2,7 @@
 <h1 id="logo">CODEZILLA</h1>
 
 <h2 class="divider">Here's a rainbow puking panda!@</h2>
-<div class="cz-section cz-rainbow-puking-panda">
+<div class="cz-section cz-rainbow-puking-panda shaker">
     <p class="cz-text-inverse cz-rainbow-puking-panda__says">
         Hi, I am Rainbow puking panda, have some rainbow
     </p>
