--- a/src/main.scss
+++ b/src/main.scss
@@ -24,6 +24,7 @@
 @import 'scss/components/section';
 @import 'scss/components/container';
 @import 'scss/components/text';
+@import 'scss/components/shaker';
 
 @import 'scss/components/hackathon-template';
 
