--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -1,8 +1,55 @@
 <!-- Place your hackathon markup here -->
 
-<h2 class="divider">Here's a rainbow puking panda!@</h2>
-<div class="cz-section cz-rainbow-puking-panda">
-    <p class="cz-text-inverse cz-rainbow-puking-panda__says">
-        Hi, I am Rainbow puking panda, have some rainbow
-    </p>
+<div class="cz-section">
+    <div class="container">
+        <h2 class="divider">Team page bruv</h2>
+    </div>
 </div>
+<div class="cz-split-panels-combiner">
+    <div class="cz-section">
+        <div class="cz-diamond-grid">
+            <div class="cz-diamond-grid__block">
+                <div class="cz-diamond-grid__line"></div>
+                <div class="cz-diamond" cz-diamond=""></div>
+            </div>
+            <div class="cz-diamond-grid__block">
+                <div class="cz-diamond-grid__line"></div>
+                <div class="cz-diamond" cz-diamond=""></div>
+            </div>
+            <div class="cz-diamond-grid__block">
+                <div class="cz-diamond-grid__line"></div>
+                <div class="cz-diamond" cz-diamond=""></div>
+            </div>
+            <div class="cz-diamond-grid__block">
+                <div class="cz-diamond-grid__line"></div>
+                <div class="cz-diamond" cz-diamond=""></div>
+            </div>
+            <div class="cz-diamond-grid__block">
+                <div class="cz-diamond-grid__line"></div>
+                <div class="cz-diamond" cz-diamond=""></div>
+            </div>
+            <div class="cz-diamond-grid__block">
+                <div class="cz-diamond-grid__line"></div>
+                <div class="cz-diamond" cz-diamond=""></div>
+            </div>
+        </div>
+    </div>
+    <div cz-diamond-split-panel class="cz-split-panels cz-split-panels--overlay" style="display: none">
+        <h1 class="cz-split-panels__title">Huib</h1>
+        <div class="cz-split-panels__wrapper">
+            <div class="cz-split-panels__panel cz-split-panels__panel--left">
+                <div class="cz-split-panels__panel-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum consectetur eros, a molestie elit maximus sed. Ut vitae sapien justo. Suspendisse ultricies semper risus vel consequat.</p>
+                </div>
+            </div>
+            <div class="cz-split-panels__panel cz-split-panels__panel--right">
+                <div class="cz-split-panels__panel-bg" cz-panel-from-diamond></div>
+                <div class="cz-split-panels__panel-content">
+                    <div>Monster</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
