--- a/src/scss/components/hackathon-template.scss
+++ b/src/scss/components/hackathon-template.scss
@@ -1,15 +1,114 @@
-/* Place your hackathon styling here */
+@import '../settings/variables';
 
-.cz-rainbow-puking-panda {
-    background:url('http://i3.kym-cdn.com/photos/images/facebook/000/018/715/pandapuke.png') center center no-repeat; 
-    background-size: cover; 
-    width: 100vw; 
-    height:80vh;
+.cz-diamond-grid{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.cz-diamond-grid__block{
+    width:30vw;
+    height:30vh;
+    position: relative;
+    overflow: hidden;
+}
+
+//.cz-diamond-grid__line{
+//    position: absolute;
+//    display: block;
+//    width:100%;
+//    height:100%;
+//    left:0;
+//    top:50%;
+//
+//    &:before{
+//        content:" ";
+//        display: block;
+//        height:1px;
+//        background: #ccc;
+//        width:200%;
+//        left:-50%;
+//        position: absolute;
+//        transform: rotate(45deg);
+//    }
+//}
+
+.cz-diamond{
+    display:block;
+    position: absolute;
+    left:50%;
+    top:50%;
+    margin-top:-50px;
+    margin-left:-50px;
+    width:100px;
+    height:100px;
+    background: $cz-color-primary;
+    transform: rotate(45deg);
+    border-radius: 15px;
+}
+
+.cz-split-panels{
+    position: relative;
+    background: #fff;
+}
+
+.cz-split-panels--overlay{
+    position: absolute;
+    top:0;
+    left:0;
+    opacity: 0;
+    transition: opacity ease-out 0.3s;
+    transform-style: preserve-3d;
+}
+
+.cz-split-panels--active{
+    opacity: 1;
+}
+
+.cz-split-panels__wrapper {
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+}
+
+.cz-split-panels__panel {
+    width: 50%;
     position: relative;
 }
 
-.cz-rainbow-puking-panda__says {
-    position: absolute;
-    bottom: 0;
-    right: 10%;
+.cz-split-panels__panel-content{
+    padding-top: 200px;
+    position: relative;
 }
+
+.cz-split-panels__panel-bg{
+    background: $cz-color-primary;
+    position: absolute;
+    top:-10%;
+    left:-10%;
+    width:110%;
+    height:110%;
+    transform: none;
+    transform-origin: 200px 200px;
+    opacity: 1;
+}
+
+.cz-split-panels__panel-bg--animate {
+    transition: transform 0.3s ease-out;
+    transform-style: preserve-3d;
+}
+
+.cz-split-panels__title {
+    position: absolute;
+    left:0;
+    top:0;
+    width:100%;
+    text-align: center;
+    z-index: 1;
+}
+
+.cz-split-panels-combiner {
+    position: relative;
+}
+
+
