--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -1,8 +1,7 @@
 <!-- Place your hackathon markup here -->
 
-<h2 class="divider">Here's a rainbow puking panda!@</h2>
-<div class="cz-section cz-rainbow-puking-panda">
-    <p class="cz-text-inverse cz-rainbow-puking-panda__says">
-        Hi, I am Rainbow puking panda, have some rainbow
-    </p>
-</div>
+<section style="position: absolute; top:0; left:0; right:0; bottom:0;">
+    <article style="width: 100%; height: 100%;">
+        <canvas id="triangles" width="0" height="0"></canvas>
+    </article>
+</section>
