--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -1,7 +1,11 @@
 <!-- Place your hackathon markup here -->
 
-<section style="position: absolute; top:0; left:0; right:0; bottom:0;">
+<section style="width: 100%; height: 400px;">
     <article style="width: 100%; height: 100%;">
         <canvas id="triangles" width="0" height="0"></canvas>
     </article>
+</section>
+
+<section style="height: 10000px;">
+    lalala
 </section>
