--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -7,5 +7,5 @@
 </section>
 
 <section style="height: 10000px;">
-    lalala
+    \/ If you scroll down, the triangles will stop animating (for better performance) \/
 </section>
