enhancements (glow FTW)
- added glow
- defined global listeners
- rebuilt nodes (now has id as key instead of a nested property)

--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -2,10 +2,15 @@
 
 <section style="width: 100%; height: 400px;">
     <article style="width: 100%; height: 100%;">
-        <canvas id="triangles" width="0" height="0"></canvas>
+        <canvas class="cz-triangles" id="triangles" width="0" height="0"></canvas>
     </article>
 </section>
 
-<section style="height: 10000px;">
-    \/ If you scroll down, the triangles will stop animating (for better performance) \/
+<section style="height: 10000px; text-align: center;">
+    <p>
+        \/ If you scroll down, the triangles will stop animating (for better performance) \/
+    </p>
+    <p>
+        Also, try clicking on the canvas & moving the mouse ;)
+    </p>
 </section>
