Create/animate my Monster for the 'Team' page

--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -18,11 +18,11 @@
     <!-- Allows control over how referrer information is passed -->
     <meta name="referrer" content="no-referrer">
     <!-- Links -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     {{{ contents }}}
 
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 </html>
