--- a/src/scss/components/container.scss
+++ b/src/scss/components/container.scss
@@ -5,3 +5,124 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+body { background-color: lightskyblue; margin: 0; }
+
+#monster-remy {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  position: relative;
+  fill: #000;
+  transition: fill 0.5s;
+
+  @include animation('monster-remy-shake 7s linear 6s infinite');
+
+  &:hover {
+  fill: #444;
+
+    & .eye--right {
+      fill: #333;
+    }
+  }
+
+  .eye--right {
+    fill: #444;
+    transition: fill 0.25s;
+
+    &:hover {
+      fill: transparent;
+    }
+  }
+ .eye--left {
+    transform-origin: 50% 50%;
+    @include animation('monster-remy-eye-twitch 2.5s linear 3s infinite');
+  }
+
+  .lips {
+    fill: transparent;
+  }
+
+  .mouth:hover {
+    .lips {
+      transform-origin: 45% 50%;
+      @include animation('monster-remy-mouth-over 2s linear 2s infinite');
+    }
+    .teeth {
+      transform-origin: 45% 50%;
+      @include animation('monster-remy-bite 2s linear 2s infinite');
+    }
+  }
+}
+
+// Create the (prefixed) keyframes for Remy's monster
+@include keyframes(monster-remy-shake) {
+  0% {
+    transform: translateX(-2px); }
+  1% {
+    transform: translateX(1px); }
+  2% {
+    transform: translateX(2px); }
+  3% {
+    transform: translateX(0px); }
+  4% {
+    transform: translateX(-1px); }
+  5% {
+    transform: translateX(2px); }
+  6% {
+    transform: translateX(0px); }
+  7% {
+    transform: translateX(1px); }
+  8% {
+    transform: translateX(-1px); }
+  9% {
+    transform: translateX(-2px); }
+  10% {
+    transform: translateX(0px); }
+}
+@include keyframes(monster-remy-eye-twitch) {
+  0% {
+    transform: scale(1, 1); }
+  5% {
+    transform: scale(1.25, 0.5); }
+  10% {
+    transform: scale(1.25, 0.65); }
+  15% {
+    transform: scale(1.25, 0.5) }
+  20% {
+    transform: scale(1.25, 0.65); }
+  25% {
+    transform: scale(1.25, 0.5); }
+  30% {
+    transform: scale(1, 1); }
+}
+@include keyframes(monster-remy-bite) {
+  0% {
+    transform: scaleY(1); }
+  5% {
+    transform: scaleY(1.5); }
+  30% {
+    transform: scaleY(1.5); }
+  35% {
+    transform: scaleY(0.2); }
+  40% {
+    transform: scaleY(0.5); }
+  45% {
+    transform: scaleY(0.2); }
+  50% {
+    transform: scaleY(0.5); }
+  55% {
+    transform: scaleY(0.2); }
+  60% {
+    transform: scaleY(1); }
+}
+@include keyframes(monster-remy-mouth-over) {
+  0% {
+    cursor: initial; }
+  35% {
+    cursor: none; }
+  59% {
+    cursor: none; }
+  60% {
+    cursor: initial; }
+}
