Added a new CSS keyframe animation that really shakes the website. Minor code improvements

--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -20,7 +20,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body id="page">
     {{{ contents }}}
 
     <script src="bundle.js"></script>
