--- a/src/partials/hackathon-template.html
+++ b/src/partials/hackathon-template.html
@@ -8,29 +8,31 @@
 <div class="cz-split-panels-combiner">
     <div class="cz-section">
         <div class="cz-diamond-grid">
-            <div class="cz-diamond-grid__block">
-                <div class="cz-diamond-grid__line"></div>
-                <div class="cz-diamond" cz-diamond=""></div>
-            </div>
-            <div class="cz-diamond-grid__block">
-                <div class="cz-diamond-grid__line"></div>
-                <div class="cz-diamond" cz-diamond=""></div>
-            </div>
-            <div class="cz-diamond-grid__block">
-                <div class="cz-diamond-grid__line"></div>
-                <div class="cz-diamond" cz-diamond=""></div>
-            </div>
-            <div class="cz-diamond-grid__block">
-                <div class="cz-diamond-grid__line"></div>
-                <div class="cz-diamond" cz-diamond=""></div>
-            </div>
-            <div class="cz-diamond-grid__block">
-                <div class="cz-diamond-grid__line"></div>
-                <div class="cz-diamond" cz-diamond=""></div>
-            </div>
-            <div class="cz-diamond-grid__block">
-                <div class="cz-diamond-grid__line"></div>
-                <div class="cz-diamond" cz-diamond=""></div>
+            <div class="cz-diamond-grid__inner">
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
             </div>
         </div>
     </div>
