--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,21 +3,25 @@
     <ul class="cz-carousel cz-list-reset">
         <li>
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/')"></div> 
-            <h1 class="cz-carousel__title cz-divider">Front end coding</h1>
-            <p class="cz-carousel__slogan">
-                [ 'Interactieve', <br />
-                'Gebruiksvriendelijke', <br />
-                'Webapplicaties' ]
-            </p>
-    </li>
-        <li>
+            <div class="cz-carousel__content">
+                <h1 class="cz-carousel__title cz-divider">Front end coding</h1>
+                <p class="cz-carousel__slogan">
+                    [ 'Interactieve', <br />
+                    'Gebruiksvriendelijke', <br />
+                    'Webapplicaties' ]
+                </p>
+            </div>
+        </li>
+        <li style="display: none;">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/')"></div> 
-            <h1 class="cz-carousel__title cz-divider">Praat eff met G</h1>
-            <p class="cz-carousel__slogan">
-                G, ga Effe die <br />
-                Ouwe op z'n bakkus <br />
-                bonken jonguh!
-            </p>
+            <div class="cz-carousel__content">
+                <h1 class="cz-carousel__title cz-divider">Praat eff met G</h1>
+                <p class="cz-carousel__slogan">
+                    G, ga Effe die <br />
+                    Ouwe op z'n bakkus <br />
+                    bonken jonguh!
+                </p>
+            </div>
         </li>
     </ul>
 </header>
