Media block with monsters

--- a/src/main.scss
+++ b/src/main.scss
@@ -25,5 +25,6 @@
 @import 'scss/components/section';
 @import 'scss/components/container';
 @import 'scss/components/text';
+@import 'scss/components/media-block';
 
 /* Utilities */
