--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -30,5 +30,6 @@ $cz-color-shadow:           rgb(226,231,233);       // #e2e7e9
 $cz-inner-spacing: 16px;
 
 // Breakpoints
-$cz-breakpoint-desktop: 520px;
+$cz-breakpoint-tablet: 520px;
+$cz-breakpoint-desktop: 770px;
 $cz-max-width-desktop: 1000px;
