--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -1,11 +1,22 @@
+$cz-carousel-transition-duration: 700ms;
+$cz-carousel-transition-delay: 900ms;
+
 .cz-header {
     height: 100vh;
     width: 100vw;
     color: $cz-text-inverse;
+    position: relative;
 
     @media screen and (max-width: $cz-breakpoint-desktop) {
         padding: $cz-inner-spacing;
     }
+}
+
+.cz-header__background {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
 }
 
 .cz-carousel {
@@ -13,12 +24,12 @@
         display: flex;
         min-height: 300px;
         position: absolute;
-        z-index: 1;
+        z-index: -1;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: $cz-background;
+        // background-color: $cz-background; //removeme
     }
 
     .cz-carousel__image {
@@ -31,14 +42,18 @@
         right: 0;
         background-size: cover;
         background-position: 50% 50%;
-        transition: opacity 300ms ease-out;
+        transition: 
+            // opacity 300ms ease-out, 
+            opacity $cz-carousel-transition-duration ease-in-out $cz-carousel-transition-delay,
+            transform $cz-carousel-transition-duration ease-in-out $cz-carousel-transition-delay;
+        transform: translateX(50%);
     }
 
-    @media screen and (min-width: $cz-breakpoint-desktop) {
-        .cz-carousel__image {
-            opacity: 1;
-        }
-    }
+    // @media screen and (min-width: $cz-breakpoint-desktop) {
+    //     .cz-carousel__image {
+    //         opacity: 1;
+    //     }
+    // }
 }
 
 .cz-carousel__content {
@@ -54,13 +69,24 @@
     position: relative;
     z-index: 1;
     text-align: center;
+    font-size: 45px;
+    text-transform: uppercase;
     color: $cz-text-inverse;
     padding-bottom: $cz-inner-spacing * 2;
-    transition: font 150ms ease-out;
+    transition: 
+        font 150ms ease-out, 
+        opacity $cz-carousel-transition-duration ease-in-out,
+        transform $cz-carousel-transition-duration ease-in-out;
+    transform: translateY(50%);
+    opacity: 0;
+
+    &:after {
+        transition: bottom $cz-carousel-transition-duration ease-in-out;
+        bottom: $cz-inner-spacing;
+    }
 
     @media screen and (max-width: $cz-breakpoint-desktop) {
         text-align: left;
-        font-size: 45px;
         line-height: 1.3;
     }
 }
@@ -70,7 +96,12 @@
     z-index: 1;
     text-align: left;
     font-size: 20px;
-    transition: font 150ms ease-out;
+    transition: 
+        font 150ms ease-out, 
+        opacity $cz-carousel-transition-duration ease-in-out $cz-carousel-transition-delay,
+        transform $cz-carousel-transition-duration ease-in-out $cz-carousel-transition-delay;
+    transform: translateX(-50%);
+    opacity: 0;
 
     @media screen and (min-width: $cz-breakpoint-desktop) {
             text-align: right;
@@ -78,6 +109,35 @@
     }
 }
 
+.cz-carousel--current {
+
+    .cz-carousel & {
+        z-index: 1;
+    }
+
+    &:not(.cz-carousel--transition) {
+        .cz-carousel__title {
+            transition-delay: $cz-carousel-transition-delay * 2; // why double?
+            transform: translateY(0);
+            opacity: 1;
+
+            &:after {
+                transition: bottom $cz-carousel-transition-duration ease-in-out $cz-carousel-transition-delay * 2;
+                bottom: 0;
+            }
+        }
+        .cz-carousel__slogan {
+            transition-delay: 0;
+            transform: translateX(0);
+            opacity: 1;
+        }
+        .cz-carousel__image {
+            transition-delay: 0;
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+}
 // .cz-section-cta {
 //     @include cz-font-family('Light', 'Radikal');
 //     font-size: 39px;
