Fixed heading and text for footer columns

--- a/src/scss/components/text.scss
+++ b/src/scss/components/text.scss
@@ -10,3 +10,8 @@
     color: $cz-text-inverse;
 }
 
+.cz-text-link-inverse {
+    @include cz-font-family('Regular', 'Radikal');
+    color: $cz-text-inverse;
+}
+
