--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -18,7 +18,7 @@
     <!-- Allows control over how referrer information is passed -->
     <meta name="referrer" content="no-referrer">
     <!-- Links -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     {{> header }}
