--- a/src/scss/components/diamond-grid.scss
+++ b/src/scss/components/diamond-grid.scss
@@ -14,16 +14,25 @@ $diamong-grid-width-md: 60vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: $diamong-grid-width-md;
+    width: 100%;
     margin-left:auto;
     margin-right: auto;
+
+    @media (min-width: $cz-breakpoint-tablet) {
+        width: $diamong-grid-width-md;
+    }
 }
 
 .cz-diamond-grid__block{
-    width:$diamong-grid-width-md/3;
-    height:$diamong-grid-width-md/3;
+    width: 100%;
+    height: 200px;
     position: relative;
     overflow: hidden;
+
+    @media (min-width: $cz-breakpoint-tablet) {
+        width:$diamong-grid-width-md/3;
+        height:$diamong-grid-width-md/3;
+    }
 }
 
 .cz-diamond-grid__line{
