Added footer triangles

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,32 +1,34 @@
 <footer class="cz-footer">
+    <div class="cz-footer__blocks">
+        <canvas class="cz-footer__triangles cz-triangles" width="0" height="0"></canvas>
 
-    <section class="cz-footer__block cz-section-inverse">
-        <div class="cz-footer__block-container container">
-            <h2 class="cz-heading-2 heading-inverse">Koffie of lunch?</h2>
-            <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
+        <section class="cz-footer__block">
+            <div class="cz-footer__block-container container">
+                <h2 class="cz-heading-2 heading-inverse">Koffie of lunch?</h2>
+                <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
 
-            <h3 class="cz-heading-3 heading-inverse">Bel of mail ons</h3>
-            <p class="cz-text-inverse">
-                <a class="cz-text-inverse" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a> of <a class="cz-text-inverse" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
-            </p>
-        </div>
-    </section>
+                <h3 class="cz-heading-3 heading-inverse">Bel of mail ons</h3>
+                <p class="cz-text-inverse">
+                    <a class="cz-text-inverse" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a> of <a class="cz-text-inverse" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
+                </p>
+            </div>
+        </section>
 
-    <section class="cz-footer__block cz-section-inverse">
-        <div class="cz-footer__block-container container">
-            <h2 class="cz-heading-2 heading-inverse">CODEZILLA B.V.</h2>
-            <p class="cz-text-inverse">
-                Hoogoorddreef 9<br />
-                1101 BA AMSTERDAM (Nabij de Arena)<br />
-                KVK nr. 62653229
-            </p>
-            <p class="cz-text-inverse">
-                Tel: <a class="cz-text-inverse" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a><br />
-                Email: <a class="cz-text-inverse" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
-            </p>
-        </div>
-    </section>
-
+        <section class="cz-footer__block">
+            <div class="cz-footer__block-container container">
+                <h2 class="cz-heading-2 heading-inverse">CODEZILLA B.V.</h2>
+                <p class="cz-text-inverse">
+                    Hoogoorddreef 9<br />
+                    1101 BA AMSTERDAM (Nabij de Arena)<br />
+                    KVK nr. 62653229
+                </p>
+                <p class="cz-text-inverse">
+                    Tel: <a class="cz-text-inverse" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a><br />
+                    Email: <a class="cz-text-inverse" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
+                </p>
+            </div>
+        </section>
+    </div>
     <div class="cz-footer__cta">
         <div><a href="{{ nextPage.url }}" class="cz-footer__cta-link">Bekijk {{ nextPage.title }}</a></div>
     </div>
